# django_intro

./: .gitignore  README.md  main.py  makefile  pyproject.toml
hexlet_django_blog/: factories.py  settings.py  urls.py  views.py
hexlet_django_blog/article/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/article/templates/article/: index.html
hexlet_django_blog/article/templates/articles/: index.html  update.html
hexlet_django_blog/articles/: forms.py  models.py  urls.py  views.py
hexlet_django_blog/articles/migrations/: 0001_initial.py
hexlet_django_blog/articles/templates/articles/: create.html  detail.html  form.html
hexlet_django_blog/articles/tests/: factories.py  tests_app_.py
hexlet_django_blog/comments/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
hexlet_django_blog/comments/migrations/: 0001_initial.py
hexlet_django_blog/comments/templates/comments/: comment_form.html
hexlet_django_blog/products/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
hexlet_django_blog/products/migrations/: 0001_initial.py
hexlet_django_blog/products/templates/products/: _category_filter.html  category_create.html  product_create.html  product_detail.html  product_list.html
hexlet_django_blog/templates/: 404.html  base.html
hexlet_django_blog/tests/: tests_app.py
products/: models.py  urls.py  views.py
products/templates/products/: product_detail.html  product_list.html
