[tool.poetry]
name = "django-intro"
packages = [
{ include = "hexlet_django_blog" },
]
version = "0.1.0"
description = ""
authors = ["NoFate35 <vsokol35@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.5"
python-dotenv = "^1.1.1"
dj-database-url = "^3.0.1"
django-bootstrap4 = "^25.2"
factory-boy = "^3.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
